Changing to frankfurt region

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
   name: elasticsearch
   env: docker
   plan: standard
+  region: frankfurt
   disk:
     name: esdata
     mountPath: /usr/share/elasticsearch/data
